--- a/packages/crexi_dev/schematics/component/files/__name@dasherize@if-flat__/__name@dasherize__.component.ts.template
+++ b/packages/crexi_dev/schematics/component/files/__name@dasherize@if-flat__/__name@dasherize__.component.ts.template
@@ -1,23 +1,30 @@
 import { Component, OnInit<% if(!!viewEncapsulation) { %>, ViewEncapsulation<% }%><% if(changeDetection !== 'Default') { %>, ChangeDetectionStrategy<% }%> } from '@angular/core';
 
-@Component({<% if(!skipSelector) {%>
-  selector: '<%= selector %>',<%}%><% if(inlineTemplate) { %>
-  template: `
-    <p>
-      <%= dasherize(name) %> works!
-    </p>
-  `,<% } else { %>
-  templateUrl: './<%= dasherize(name) %>.component.html',<% } if(inlineStyle) { %>
-  styles: []<% } else { %>
-  styleUrls: ['./<%= dasherize(name) %>.component.<%= style %>']<% } %><% if(!!viewEncapsulation) { %>,
-  encapsulation: ViewEncapsulation.<%= viewEncapsulation %><% } if (changeDetection !== 'Default') { %>,
-  changeDetection: ChangeDetectionStrategy.<%= changeDetection %><% } %>
+@Component({<% if (changeDetection !== 'Default') { %>
+    changeDetection: ChangeDetectionStrategy.<%= changeDetection %>,<% } if(!!viewEncapsulation) { %>
+    encapsulation: ViewEncapsulation.<%= viewEncapsulation %>,<% } %>
+    selector: '<%= selector %>',<% if(inlineStyle) { %>
+    styles: [],<% } else { %>
+    styleUrls: ['./<%= dasherize(name) %>.<%= styleext %>'],<% } if(inlineTemplate) { %>
+    template: `
+        <p>
+            <%= dasherize(name) %> works!
+        </p>
+    `<% } else { %>
+    templateUrl: './<%= dasherize(name) %>.pug'<% } %>
 })
 export class <%= classify(name) %>Component implements OnInit {
 
-  constructor() { }
+    constructor () {
 
-  ngOnInit() {
-  }
+        // constructor
+
+    }
+
+    ngOnInit () {
+
+        // on init
+
+    }
 
 }
