--- a/packages/crexi_dev/schematics/guard/files/__name@dasherize__.guard.ts.template
+++ b/packages/crexi_dev/schematics/guard/files/__name@dasherize__.guard.ts.template
@@ -3,22 +3,31 @@ import { <%= implementationImports %>ActivatedRouteSnapshot, RouterStateSnapshot
 import { Observable } from 'rxjs';
 
 @Injectable({
-  providedIn: 'root'
+    providedIn: 'root'
 })
 export class <%= classify(name) %>Guard implements <%= implementations %> {
-  <% if (implements.includes('CanActivate')) { %>canActivate(
-    next: ActivatedRouteSnapshot,
-    state: RouterStateSnapshot): Observable<boolean | UrlTree> | Promise<boolean | UrlTree> | boolean | UrlTree {
-    return true;
-  }
-  <% } %><% if (implements.includes('CanActivateChild')) { %>canActivateChild(
-    next: ActivatedRouteSnapshot,
-    state: RouterStateSnapshot): Observable<boolean | UrlTree> | Promise<boolean | UrlTree> | boolean | UrlTree {
-    return true;
-  }
-  <% } %><% if (implements.includes('CanLoad')) { %>canLoad(
-    route: Route,
-    segments: UrlSegment[]): Observable<boolean> | Promise<boolean> | boolean {
-    return true;
-  }<% } %>
+
+    <% if (implements.includes('CanActivate')) { %>canActivate(
+        next: ActivatedRouteSnapshot, state: RouterStateSnapshot
+    ): Observable<boolean | UrlTree> | Promise<boolean | UrlTree> | boolean | UrlTree {
+
+        return true;
+
+    }
+
+    <% } %><% if (implements.includes('CanActivateChild')) { %>canActivateChild(
+        next: ActivatedRouteSnapshot, state: RouterStateSnapshot
+    ): Observable<boolean | UrlTree> | Promise<boolean | UrlTree> | boolean | UrlTree {
+
+        return true;
+
+    }
+
+    <% } %><% if (implements.includes('CanLoad')) { %>canLoad(route: Route, segments: UrlSegment[]): Observable<boolean> | Promise<boolean> | boolean {
+
+        return true;
+
+    }
+
+    <% } %>
 }
